@@ -45,6 +45,20 @@ Available modules:
   - ```openglfx-jogl```
   - ```openglfx-libgdx```
 
+If you are using java modules, then you need to add the following module in `module-info.java`:
+```java
+requires openglfx.lwjgl;
+```
+and launch with the following arguments:
+```
+--add-exports=javafx.graphics/com.sun.prism=ALL-UNNAMED
+--add-exports=javafx.graphics/com.sun.javafx.scene.layout=ALL-UNNAMED
+--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED
+--add-exports=javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED
+--add-exports=javafx.graphics/com.sun.scenario=ALL-UNNAMED
+--add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED
+--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+```
 
 # Example
 https://github.com/husker-dev/openglfx-example
